--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,8 @@
 .main {
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 1.5rem;
     padding: 2rem 1rem;
 }
 
@@ -42,4 +44,67 @@
 
 .main__itens__ilustracao {
     width: 40%;
+}
+
+.main__receitas {
+    width: 100%;
+}
+
+.main__receitas__titulo {
+    font-size: 1rem;
+}
+
+.main__receitas__itens {
+    max-height: 15rem;
+    margin-top: 1.5rem;
+    padding: 0.2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    overflow: scroll;
+}
+
+.receitas__itens__card {
+    width: 100%;
+    padding: 1rem;
+    border-radius: 1rem;
+    box-shadow: var(--box-shadow-botao-secundario);
+    background-color: var(--background-card-secundario);
+}
+
+.receitas__itens__card {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.itens__card__image {
+    width: 3rem;
+    height: 3rem;
+}
+
+.card__conteudo {
+    line-height: 1.2rem;
+    flex-grow: 3;
+}
+
+.card__conteudo__titulo {
+    font-size: .9rem;
+}
+
+.card__conteudo__descricao {
+    font-size: .8rem;
+}
+
+.receitas__itens__link {
+    display: grid;
+    place-items: center;
+    width: 2.5rem;
+    height: 2.5rem;
+    box-shadow: var(--box-shadow-botao-secundario);
+    border-radius: .4rem;
+}
+
+.itens__link__image {
+    width: 55%;
 }
