--- a/css/base.css
+++ b/css/base.css
@@ -1,22 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap");
 
 :root {
     --cor-borda-input: #f0f0f0;
     --cor-botao-primario: #ffffff;
-    --cor-botao-secundario: ##6D6D6D;
+    --cor-botao-secundario: #6d6d6d;
+    --cor-descricao: #a3a3a3;
     --cor-menu-link: #ffffff;
     --cor-card: #ffffff;
     --cor-card-secundario: #242424;
     --cor-titulo: #242424;
     --cor-input: #d2d2d2;
+    --cor-section: #ffffff;
     --background-card-secundario: #ffffff;
     --background-card: #ff6801;
     --background-botao-primario: #ff6801;
     --background-menu-link: #ff6801;
-    --background-botao-secundario: #FFFFFF;
+    --background-section: #ff6801;
+    --background-ingrediente-item: #f5f5f5;
+    --background-botao-secundario: #ffffff;
     --box-shadow-botao-secundario: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     --borda-divisao: #d2d2d2;
-    --fonte-family-montserrat: 'Montserrat', sans-serif;
+    --fonte-family-montserrat: "Montserrat", sans-serif;
 }
 
 * {
@@ -81,13 +85,13 @@ body .main--tela {
 }
 
 .label {
-    padding-left: .5rem;
+    padding-left: 0.5rem;
 }
 
 .label,
 .input,
 .input::placeholder {
-    font-size: .8rem;
+    font-size: 0.8rem;
 }
 
 .input {
@@ -99,11 +103,11 @@ body .main--tela {
 .input,
 .input::placeholder {
     color: var(--cor-input);
-    font-family: var(--fonte-family-montserrat)
+    font-family: var(--fonte-family-montserrat);
 }
 
 .botao {
-    padding: .65rem 2rem;
+    padding: 0.65rem 2rem;
     font-family: var(--fonte-family-montserrat);
     font-weight: bold;
     font-size: 1.1rem;
