--- a/css/esqueceu-senha.css
+++ b/css/esqueceu-senha.css
@@ -15,7 +15,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: .5rem;
+    gap: 0.5rem;
     text-align: center;
 }
 
@@ -27,7 +27,6 @@
 .esqueceu-senha__cabecalho__descricao {
     font-size: 1rem;
 }
-
 
 .main__esqueceu-senha__fieldset {
     width: 100%;
