--- a/css/login.css
+++ b/css/login.css
@@ -2,9 +2,9 @@
     width: 100%;
     height: 100%;
     display: flex;
+    justify-content: space-evenly;
     flex-direction: column;
     padding: 1rem;
-    gap: 1.5rem;
 }
 
 .main__logo {
@@ -20,15 +20,14 @@
 }
 
 .main__login__title {
-    font-size: 2rem;
-    font-weight: bold;
+    display: none;
 }
 
 .main__login__fieldset {
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: .8rem;
+    gap: 0.8rem;
 }
 
 .login__fieldset__botao-login {
@@ -43,7 +42,7 @@
 }
 
 .link-login {
-    font-size: .8rem;
+    font-size: 0.8rem;
     text-transform: uppercase;
     text-align: center;
     font-weight: 600;
@@ -59,12 +58,12 @@
 }
 
 .fieldset__logar-com__rede-social {
-    padding: .5rem 1rem;
+    padding: 0.5rem 1rem;
     display: flex;
     align-items: center;
     gap: 1rem;
     border-radius: 2rem;
-    font-size: .9rem;
+    font-size: 0.9rem;
 }
 
 .fieldset__logar-com__criar-aconta {
