--- a/css/base.css
+++ b/css/base.css
@@ -11,6 +11,7 @@
     --cor-titulo: #242424;
     --cor-input: #d2d2d2;
     --cor-section: #ffffff;
+    --cor-vencimento-alimento: #ff6801;
     --background-card-secundario: #ffffff;
     --background-card: #ff6801;
     --background-botao-primario: #ff6801;
@@ -130,3 +131,45 @@ body .main--tela {
     width: 1.3rem;
     height: 1.3rem;
 }
+
+.card {
+    width: 100%;
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    border-radius: 1rem;
+    box-shadow: var(--box-shadow-botao-secundario);
+    background-color: var(--background-card-secundario);
+}
+
+.card__image {
+    width: 3rem;
+    height: 3rem;
+}
+
+.card__conteudo {
+    line-height: 1.2rem;
+    flex-grow: 3;
+}
+
+.card__conteudo__titulo {
+    font-size: 0.9rem;
+}
+
+.card__conteudo__descricao {
+    font-size: 0.8rem;
+}
+
+.card__link {
+    display: grid;
+    place-items: center;
+    width: 2.5rem;
+    height: 2.5rem;
+    box-shadow: var(--box-shadow-botao-secundario);
+    border-radius: 0.4rem;
+}
+
+.card__link__image {
+    width: 55%;
+} 
