chore: adicionando tela de relatório

--- a/css/base.css
+++ b/css/base.css
@@ -17,8 +17,10 @@
     --cor-card-alerta: #ffffff;
     --cor-card-ok: #ffffff;
     --cor-card-erro: #ffffff;
+    --cord-card-relatorio: #ffffff;
     --background-card-alerta: #ffb603;
     --background-card-ok: #73b437;
+    --background-card-relatorio: #ff6801;
     --background-card-erro: #d96f78;
     --background-card-secundario: #ffffff;
     --background-card: #ff6801;
