--- a/css/login.css
+++ b/css/login.css
@@ -54,7 +54,7 @@
     padding-top: 1rem;
     display: grid;
     gap: 1rem;
-    border-top: 1px solid var(--borda-divisao);
+    border-top: 1px solid var(--cor-terciaria);
 }
 
 .fieldset__logar-com__rede-social {
