--- a/css/base.css
+++ b/css/base.css
@@ -1,43 +1,19 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap");
 
 :root {
+    --cor-primaria: #ff6801;
+    --cor-secundaria: #ffffff;
+    --cor-terciaria: #d2d2d2;
+    --cor-preto-padrao: #242424;
     --cor-borda-input: #f0f0f0;
-    --cor-botao-primario: #ffffff;
     --cor-botao-secundario: #6d6d6d;
     --cor-descricao: #a3a3a3;
-    --cor-menu-link: #ffffff;
-    --cor-card: #ffffff;
-    --cor-card-secundario: #242424;
-    --cor-titulo: #242424;
-    --cor-input: #d2d2d2;
-    --cor-section: #ffffff;
-    --cor-item-notificao--selecionado: #ffffff;
-    --cor-vencimento-alimento: #ff6801;
-    --cor-quantidade-alimento: #ff6801;
-    --cor-card-alerta: #ffffff;
-    --cor-card-ok: #ffffff;
-    --cor-card-erro: #ffffff;
-    --cord-card-relatorio: #ffffff;
     --background-card-alerta: #ffb603;
     --background-card-ok: #73b437;
-    --background-card-relatorio: #ff6801;
     --background-card-erro: #d96f78;
-    --background-card-secundario: #ffffff;
-    --background-card: #ff6801;
-    --background-botao-primario: #ff6801;
-    --background-menu-link: #ff6801;
-    --background-section: #ff6801;
-    --background-select-input: #ff6801;
     --background-ingrediente-item: #f5f5f5;
-    --background-botao-secundario: #ffffff;
-    --background-item-notificacao--selecionado: #ff6801;
-    --background-item-notificacao: #ffffff;
-    --box-shadow-botao-secundario: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-    --box-notificacao: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    --box-shadow-padrao: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     --box-card: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-    --borda-divisao: #d2d2d2;
-    --borda-total-itens: #d2d2d2;
-    --borda-select: #ff6801;
     --fonte-family-montserrat: "Montserrat", sans-serif;
 }
 
@@ -50,13 +26,13 @@
 html,
 body {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     font-size: 16px;
     font-family: var(--fonte-family-montserrat);
 }
 
 h1 {
-    color: var(--cor-titulo);
+    color: var(--cor-preto-padrao);
 }
 
 h1,
@@ -127,7 +103,7 @@ body .main--tela {
 
 .input,
 .input::placeholder {
-    color: var(--cor-input);
+    color: var(--cor-terciaria);
     font-family: var(--fonte-family-montserrat);
 }
 
@@ -142,7 +118,7 @@ body .main--tela {
 
 .input:read-only:focus-visible {
     outline: none;
-    border-bottom: 1px solid var(--borda-select);
+    border-bottom: 1px solid var(--cor-primaria);
 }
 
 .botao {
@@ -155,14 +131,14 @@ body .main--tela {
 }
 
 .botao--primario {
-    background-color: var(--background-botao-primario);
-    color: var(--cor-botao-primario);
+    background-color: var(--cor-primaria);
+    color: var(--cor-secundaria);
 }
 
 .botao--secundario {
-    background-color: var(--background-botao-secundario);
+    background-color: var(--cor-secundaria);
     color: var(--cor-botao-secundario);
-    box-shadow: var(--box-shadow-botao-secundario);
+    box-shadow: var(--box-shadow-padrao);
 }
 
 .botao--icone {
@@ -177,8 +153,8 @@ body .main--tela {
     align-items: center;
     gap: 1rem;
     border-radius: 1rem;
-    box-shadow: var(--box-shadow-botao-secundario);
-    background-color: var(--background-card-secundario);
+    box-shadow: var(--box-shadow-padrao);
+    background-color: var(--cor-secundaria);
 }
 
 .card__image {
@@ -204,7 +180,7 @@ body .main--tela {
     place-items: center;
     width: 2.5rem;
     height: 2.5rem;
-    box-shadow: var(--box-shadow-botao-secundario);
+    box-shadow: var(--box-shadow-padrao);
     border-radius: 0.4rem;
 }
 
